// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.addQuestionnaireStepMutation admin project should be able to add questionnaire step. 1`] = `
Object {
  "addQuestionnaireStep": Object {
    "step": Object {
      "__typename": "QuestionnaireStep",
      "body": null,
      "collectParticipantsEmail": true,
      "enabled": true,
      "isAnonymousParticipationAllowed": true,
      "label": "Questionnaire",
      "questionnaire": Object {
        "creator": Object {
          "username": "Théo QP",
        },
        "description": null,
        "owner": Object {
          "username": "Théo QP",
        },
        "questions": Array [
          Object {
            "position": 1,
            "title": "Avez-vous une remarque à apporter ?",
            "type": "textarea",
          },
        ],
        "title": "Questionnaire",
      },
      "title": "Questionnaire",
    },
  },
}
`;

exports[`mutations.addQuestionnaireStepMutation admin should be able to add questionnaire step. 1`] = `
Object {
  "addQuestionnaireStep": Object {
    "step": Object {
      "__typename": "QuestionnaireStep",
      "body": null,
      "collectParticipantsEmail": true,
      "enabled": true,
      "isAnonymousParticipationAllowed": true,
      "label": "Questionnaire",
      "questionnaire": Object {
        "creator": Object {
          "username": "admin",
        },
        "description": null,
        "owner": Object {
          "username": "admin",
        },
        "questions": Array [
          Object {
            "position": 1,
            "title": "Avez-vous une remarque à apporter ?",
            "type": "textarea",
          },
        ],
        "title": "Questionnaire",
      },
      "title": "Questionnaire",
    },
  },
}
`;

exports[`mutations.addQuestionnaireStepMutation orga member should be able to add questionnaire step. 1`] = `
Object {
  "addQuestionnaireStep": Object {
    "step": Object {
      "__typename": "QuestionnaireStep",
      "body": null,
      "collectParticipantsEmail": true,
      "enabled": true,
      "isAnonymousParticipationAllowed": true,
      "label": "Questionnaire",
      "questionnaire": Object {
        "creator": Object {
          "username": "Christophe Cassou",
        },
        "description": null,
        "owner": Object {
          "username": "GIEC",
        },
        "questions": Array [
          Object {
            "position": 1,
            "title": "Avez-vous une remarque à apporter ?",
            "type": "textarea",
          },
        ],
        "title": "Questionnaire",
      },
      "title": "Questionnaire",
    },
  },
}
`;

exports[`mutations.addQuestionnaireStepMutation questionnaire owner should be organization when admin create the step in a project owned by an organization. 1`] = `
Object {
  "addQuestionnaireStep": Object {
    "step": Object {
      "__typename": "QuestionnaireStep",
      "body": null,
      "collectParticipantsEmail": true,
      "enabled": true,
      "isAnonymousParticipationAllowed": true,
      "label": "Questionnaire",
      "questionnaire": Object {
        "creator": Object {
          "username": "lbrunet",
        },
        "description": null,
        "owner": Object {
          "username": "GIEC",
        },
        "questions": Array [
          Object {
            "position": 1,
            "title": "Avez-vous une remarque à apporter ?",
            "type": "textarea",
          },
        ],
        "title": "Questionnaire",
      },
      "title": "Questionnaire",
    },
  },
}
`;
